[tool.poetry]
name = "alxboyle-vocab-tracker"
version = "0.1.0"
description = "Track Chinese vocabulary progress from Anki and update README badge"
authors = ["Alex Boyle <alex.ray.boy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
anki = "^2.1"

[tool.poetry.scripts]
update-vocabulary = "update_vocabulary:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
